--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,12 +10,21 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
-  url_launcher: ^6.3.1
-  animate_do: ^3.3.4
-  google_fonts: ^6.2.1
   flutter_localizations:
     sdk: flutter
-
+  google_fonts: ^6.2.1
+  flutter_html: ^3.0.0-beta.2 # لعرض HTML (IFrame) على الويب
+  youtube_player_flutter: ^9.1.1
+  flutter_inappwebview: ^6.1.0 # لعرض IFrame على الويب
+  cached_network_image: ^3.3.1
+  animate_do: ^3.3.4
+  carousel_slider: ^5.0.0
+  countup: ^0.1.4
+  expandable: ^5.0.1
+  flutter_staggered_grid_view: ^0.7.0
+  percent_indicator: ^4.2.3
+  url_launcher: ^6.3.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
