--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   percent_indicator: ^4.2.3
   url_launcher: ^6.3.0
+  http: ^1.3.0
   
 dev_dependencies:
   flutter_test:
